--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,18 @@ header {
     padding: 10px;
     text-align: center;
     transition: background-position 0.5s ease; /* Add a transition effect */
+    display: flex;
+    align-items: center;
+}
+
+header div h1 {
+    margin-right: 87px;
+}
+
+header img {
+    max-width: 150px;
+    margin-right: 10px;
+    border-radius: 75px;
 }
 
 nav {
